@@ -59,6 +59,7 @@ public class PaymentAuthorisationSpiImplTest {
     private static final byte[] CONSENT_DATA_BYTES = "consent_data".getBytes();
     private static final String PAYMENT_ID = "c966f143-f6a2-41db-9036-8abaeeef3af7";
     private static final String SECRET = "12345";
+    private static final SpiAuthorisationStatus SPI_AUTHORISATION_STATUS_FAILURE = SpiAuthorisationStatus.FAILURE;
 
     @InjectMocks
     private PaymentAuthorisationSpiImpl authorisationSpi;
@@ -233,7 +234,7 @@ public class PaymentAuthorisationSpiImplTest {
     }
 
     @Test
-    public void authorisePsu_failure() {
+    public void authorisePsu_failureStatus() {
         when(spiAspspConsentDataProvider.loadAspspConsentData()).thenReturn(CONSENT_DATA_BYTES);
         SCAPaymentResponseTO scaPaymentResponseTO = getScaPaymentResponseTO(ScaStatusTO.PSUIDENTIFIED);
         scaPaymentResponseTO.setScaMethods(Collections.emptyList());
@@ -246,8 +247,8 @@ public class PaymentAuthorisationSpiImplTest {
         SpiResponse<SpiAuthorisationStatus> actual = authorisationSpi.authorisePsu(SPI_CONTEXT_DATA, PSU_ID_DATA, SECRET,
                                                                                    businessObject, spiAspspConsentDataProvider);
 
-        assertTrue(actual.hasError());
-        assertEquals(MessageErrorCode.PSU_CREDENTIALS_INVALID, actual.getErrors().get(0).getErrorCode());
+        assertFalse(actual.hasError());
+        assertEquals(actual.getPayload(), SPI_AUTHORISATION_STATUS_FAILURE);
 
         verify(spiAspspConsentDataProvider, times(1)).loadAspspConsentData();
         verify(consentDataService, times(1)).response(CONSENT_DATA_BYTES, SCAPaymentResponseTO.class, false);
